added edit / copy button on chat and chat header

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -75,3 +75,10 @@ body {
 .scrollbar-custom::-webkit-scrollbar-thumb:hover {
   background-color: #000;
 }
+
+/* hide scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+
